# mathcodes

./: .gitignore  math_memo.lyx  packages.jl  readme.md
GenerativeArtWithMath/: ReadMe.txt  readme.md  sample001.py
Introduction_to_Lattice_Boltzmann_Equation/: code_check.rs  sample1.py  sample1.rs  static_droplets.rs
Introduction_to_Lattice_Boltzmann_Equation/static_droplets_ver0/: Cargo.toml
Introduction_to_Lattice_Boltzmann_Equation/static_droplets_ver0/src/: main.rs
ProjectEuler/: Dockerfile  docker-compose.yml  readme.md
Yazaki-Ugoku-Kyokusen-No-Suuchi-Keisan/: Chap1-001.ipynb
diffusion_eq/: 1dim.rs  2dim.rs
elliptic/: 1dim_heat_kernel.rs
fundamental_for_CFD/: 1d_mp4.py  4-1_convection_smooth.rs  4-1_convection_square.rs  4-2_burgers_smooth.rs  4-2_burgers_square.rs  4-2_conv_nonlinear_convection_square.rs  4-3_convection_2nd_order_Lax-Wendroff.rs  4-4_convection_2nd_order_Beam-Warming.rs  4-5_convection_2nd_order_Fromm.rs  4-6_convection_2nd_order_TVD.rs  4-7_convection_2nd_order_TVD_flux-limiter.rs  4-8_burgers_1st_order_Lax-Friedrichs.rs  4-8_burgers_1st_order_Lax_Friedrichs_fix1.rs  4-9_burgers_1st_order_Harton.rs  5-1_1dim_euler_1st_order.rs  5-2_1dim_euler_Lax-Wendroff.rs  5-3_1dim_euler_TVD.rs  command_sample.rs  gnuplot_sample.rs  program4-1.py  program4-2.py  program4-3.py  readme.md  readme.org  vector3d_sample.rs
gnuplot/: 2020-04-11-233839.gp  color.gp  sample0001.gp  sample0002.gp  sample0003.gp  sample0004.gp  sample0005.gp  sample0006.gp  sample0007.gp  sample0008.gp
julia/: junomemo.jl  pkgs.jl  readme.md
jupiter/: math_ode.ipynb  (+18 more)
(+710 files in other folders)
