[package]
name = "static_droplets_ver0"
version = "0.1.0"
authors = ["phasetr <phasetr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
gnuplot = "0.0.34"
ndarray = "0.13.0"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_yaml = "0.8.11"